some Changes on experinece section

--- a/src/Css/experience.css
+++ b/src/Css/experience.css
@@ -12,3 +12,22 @@
     background-color: #8000FF;
     width: fit-content;
 }
+.icon{
+    display: inline-block;
+    height: 54px;
+    width: 54px;
+    border-radius: 16px;
+    margin: 0 0.5rem;
+}
+.iconOne{
+    background-color:#0066FF;
+}
+.iconTwo{
+    background-color:#FFC700;
+}
+.iconThree{
+    background-color:#00CB14;
+}
+.iconFour{
+    background-color:#DD2929;
+}
