--- a/src/Css/univercity.css
+++ b/src/Css/univercity.css
@@ -20,3 +20,13 @@
     font-size: 20px;
     transform: rotate(90deg);
 }
+
+#satyaimg{
+    left:100px;
+    z-index: -1;
+}
+
+#unaUni{
+    right: 0;
+    z-index: -1;
+}
